# vibe_books

./: .gitignore  AGENTS.md  extract_data  justfile  main.py  pyproject.toml
api/: contracts.py  filters.py  main.py  repository.py  schemas.py
apps/web/: package.json  pnpm-lock.yaml
bruno/: BRUNO_TUTORIAL.md
data/: books.csv  books_candidates.csv  books_enriched.csv  books_fallback_report.json  books_isbn_resolved.csv  books_manual_overrides.csv  books_normalized.csv  books_quality_report.json  books_review.csv  books_review_remaining.csv  covers_manifest.csv
etl/: __init__.py  cli.py  covers.py  enrich.py  fallback_review.py  load_sqlite.py  logging_utils.py  matchers.py  models.py  normalize.py  report.py  resolve_isbn.py
plans/: anti_confabulacion.md  etl_implementation_plan.md  etl_pipeline.md  etl_pipeline.mmd  frontend_para_pythonistas.md  informe_owasp_top10_2025_frontend_api.md  mesa_redonda_usabilidad_frontend.md  mvp_api_plan.md  mvp_frontend_plan.md
scripts/: api_check_links.py  export_api_fixtures.py  web_check_env.py
tests/: test_api_health.py  test_api_phase2_books_detail.py  test_api_phase2_books_list.py  test_api_phase3_taxonomies.py  test_api_phase4_check_links.py  test_api_phase4_operability.py  test_api_stage1_schemas.py  test_api_stage2_contracts.py  test_api_stage3_filters.py  test_api_stage4_repository.py  test_covers.py  test_enrich.py  test_enrich_integration.py  test_fallback_review.py  test_load_sqlite.py  test_matchers.py  test_normalize.py  test_pipeline_idempotence.py  test_report.py  test_resolve_isbn_integration.py
(+28 files in other folders)
