[project]
name = "vibe-books"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "rapidfuzz>=3.14.3",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "basedpyright>=1.38.2",
    "pytest>=9.0.2",
]

[tool.basedpyright]
pythonVersion = "3.14"
typeCheckingMode = "strict"
